title of the site

--- a/css/creative.css
+++ b/css/creative.css
@@ -4,8 +4,6 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-creative/blob/master/LICENSE)
  */
 
- $base-color: #000;
-
 body,
 html {
   width: 100%;
@@ -19,7 +17,7 @@ body {
 hr {
   max-width: 50px;
   border-width: 3px;
-  border-color: $base-color;
+  border-color: #F05F40;
 }
 
 hr.light {
@@ -27,13 +25,13 @@ hr.light {
 }
 
 a {
-  color: $base-color;
+  color: #F05F40;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
 
 a:hover {
-  color: $base-color;
+  color: #f05f40;
 }
 
 h1,
@@ -46,7 +44,7 @@ h6 {
 }
 
 .bg-primary {
-  background-color: $base-color !important;
+  background-color: #F05F40 !important;
 }
 
 .bg-dark {
@@ -103,12 +101,12 @@ img::-moz-selection {
 #mainNav .navbar-brand {
   font-weight: 700;
   text-transform: uppercase;
-  color: $base-color;
+  color: #F05F40;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
 #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-  color: $base-color;
+  color: #f05f40;
 }
 
 #mainNav .navbar-nav > li.nav-item > a.nav-link,
@@ -121,12 +119,12 @@ img::-moz-selection {
 
 #mainNav .navbar-nav > li.nav-item > a.nav-link:hover,
 #mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover {
-  color: $base-color;
+  color: #F05F40;
 }
 
 #mainNav .navbar-nav > li.nav-item > a.nav-link.active,
 #mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active {
-  color: $base-color !important;
+  color: #F05F40 !important;
   background-color: transparent;
 }
 
@@ -162,10 +160,10 @@ img::-moz-selection {
     background-color: #fff;
   }
   #mainNav.navbar-shrink .navbar-brand {
-    color: $base-color;
+    color: #F05F40;
   }
   #mainNav.navbar-shrink .navbar-brand:focus, #mainNav.navbar-shrink .navbar-brand:hover {
-    color: $base-color;
+    color: #f05f40;
   }
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link,
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus {
@@ -173,7 +171,7 @@ img::-moz-selection {
   }
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:hover,
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus:hover {
-    color: $base-color;
+    color: #F05F40;
   }
 }
 
@@ -290,7 +288,7 @@ header.masthead p {
 }
 
 .text-primary {
-  color: $base-color !important;
+  color: #F05F40 !important;
 }
 
 .btn {
@@ -306,8 +304,8 @@ header.masthead p {
 }
 
 .btn-primary {
-  background-color: $base-color;
-  border-color: $base-color;
+  background-color: #F05F40;
+  border-color: #F05F40;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
